# handler/endpoints.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"fmt"
 	"net/http"
 	"slices"
 
@@ -11,16 +12,22 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+func (s *Server) GetHello(ctx echo.Context, params generated.GetHelloParams) error {
+	var resp generated.HelloResponse
+	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
+	return ctx.JSON(http.StatusOK, resp)
+}
+
 // (POST /estate)
 func (s *Server) PostEstate(ctx echo.Context) error {
 	var req generated.PostEstateRequest
 
 	if err := ctx.Bind(&req); err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
 	if err := helper.ValidateStruct(req); err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
 	output, err := s.Repository.StoreEstate(ctx.Request().Context(), repository.StoreEstateInput{
@@ -29,7 +36,7 @@ func (s *Server) PostEstate(ctx echo.Context) error {
 	})
 
 	if err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
 	return ctx.JSON(http.StatusOK, generated.PostEstateResponse{
@@ -40,30 +47,26 @@ func (s *Server) PostEstate(ctx echo.Context) error {
 
 func (s *Server) GetEstateIdDronePlan(ctx echo.Context, id string, params generated.GetEstateIdDronePlanParams) error {
 	// TODO: Validate that the estate exists
-	var maxDistance int = 0
 	estate, err := s.Repository.GetEstateByID(ctx.Request().Context(), repository.GetEstateByIDInput{
 		Id: uuid.MustParse(id),
 	})
 	if err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error)
 	}
 
 	if estate.Id == uuid.Nil {
-		return echo.NewHTTPError(http.StatusNotFound, "Estate not found")
+		return echo.NewHTTPError(http.StatusNotFound, "estate not found")
 	}
 
 	// TODO: Return the drone plan
 	output, err := s.Repository.FetchEstateTrees(ctx.Request().Context(), uuid.MustParse(id))
 
 	if err != nil {
-		return err
-	}
-	if params.MaxDistance == nil {
-		maxDistance = helper.DefaultMaxDistance
+		return ctx.JSON(http.StatusBadRequest, "estate tree failed to be fetched")
 	}
 	// TODO: Return the drone plan
 	return ctx.JSON(http.StatusOK, generated.GetEstateIDDronePlanResponse{
-		Distance: helper.CalculateDroneDistance(estate.Width, estate.Length, maxDistance, output),
+		Distance: helper.CalculateDroneDistance(estate.Width, estate.Length, output),
 	})
 }
 func (s *Server) GetEstateIdStats(ctx echo.Context, id string) error {
@@ -72,7 +75,7 @@ func (s *Server) GetEstateIdStats(ctx echo.Context, id string) error {
 		Id: uuid.MustParse(id),
 	})
 	if err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
 	if estate.Id == uuid.Nil {
@@ -82,7 +85,7 @@ func (s *Server) GetEstateIdStats(ctx echo.Context, id string) error {
 	output, err := s.Repository.FetchEstateTrees(ctx.Request().Context(), uuid.MustParse(id))
 
 	if err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, "estate tree failed to be fetched")
 	}
 
 	var treeHeights []int
@@ -104,11 +107,11 @@ func (s *Server) PostEstateIdTree(ctx echo.Context, id string) error {
 	var req generated.PostEstateTreeRequest
 
 	if err := ctx.Bind(&req); err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
 	if err := helper.ValidateStruct(req); err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
 	// TODO: Validate that the estate exists
@@ -116,7 +119,7 @@ func (s *Server) PostEstateIdTree(ctx echo.Context, id string) error {
 		Id: uuid.MustParse(id),
 	})
 	if err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
 	if estate.Id == uuid.Nil {
@@ -132,7 +135,7 @@ func (s *Server) PostEstateIdTree(ctx echo.Context, id string) error {
 	})
 
 	if err != nil {
-		return err
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
 	return ctx.JSON(http.StatusOK, generated.PostEstateResponse{
